feat(music-radio): add music-radio algorithms
